k8s/deploy/yaml/argo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
  name: argocd-ingress
  namespace: argocd
  labels:
    app: api
spec:
  ingressClassName: nginx
  rules:
  - host: argo.denartcc.org
    http:
      paths:
      - backend:
          service:
            name: argocd-server
            port:
              name: https
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - argo.denartcc.org
    secretName: argocd-secret
